# DINGUS

./: .gitignore  .pre-commit-config.yamL  .requirements.txt  README.md  pyproject.toml  requirements.txt
src/dingus/: __init__.py  cli.py  config.py  runner.py
tests/: conftest.py  test_advection_scalar_convergenceFAST.py  test_advection_scalar_convergenceSLOW.py  test_characteristic_reflection.py  test_coreNumerics.py  test_couette_flow.py  test_euler_vortex_convergenceFAST.py  test_euler_vortex_convergenceSLOW.py  test_euler_vortex_roe_llf.py  test_freestream_preservation.py  test_gmsh_handler.py  test_hohqmesh_handler.py  test_initialization_compute.py  test_input_file_reader.py  test_isentropic_vortex_convergence.py  test_isentropic_vortex_roe_llf.py  test_isop_mapping.py  test_mesh_class.py  test_mms_viscous.py  test_poiseuille_flow.py  test_quadrature_nodes_and_weights.py  test_scalar_advection_convergence.py  test_sim_monitoring.py  test_taylor_green_vortex.py
tests/SingleTests/: test_gmsh_handler.py  test_gradient_pass.py  test_input_file_reader.py  test_isop_mapping.py  test_mesh_class.py  test_sim_monitoring.py  test_viscous_flux.py
tests/UnitTests/: test_characteristic_ghost.py  test_coreNumerics.py  test_face_node_flip.py  test_freestream_preservation.py  test_gmsh_handler.py  test_gradient_pass.py  test_hohqmesh_handler.py  test_initialization_compute.py  test_input_file_reader.py  test_isop_mapping.py  test_mesh_class.py  test_prescribed_bc.py  test_quadrature_nodes_and_weights.py  test_sim_monitoring.py  test_source_term.py  test_viscosity_models.py  test_viscous_flux.py  test_wall_bcs.py
tests/testInputs/: control.yaml
tests/test_case_advection/: run_test_advection.py  run_test_scalar_advection.py  run_test_scalar_advection_V2.py
tests/test_case_advection_scalar/: control.yaml  run_test_advection_scalar.py
tests/test_case_couette_flow/: control.yaml
tests/test_case_euler_vortex/: control.yaml
tests/test_case_isentropic_vortex/: control.yaml
tests/test_case_mms_viscous/: .gitignore  control.yaml
(+71 files in other folders)
